--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--https://medium.com/over-engineering/hands-on-with-material-components-for-android-chips-21dc67c8b956-->
+<!--https://medium.com/material-design-in-action/chips-material-components-for-android-46001664a40f-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,7 +34,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tilPoemTitle"
-                style="@style/EntryTextInput"
+                style="@style/CommonTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -50,12 +52,10 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tilPoemBody"
-                style="@style/EntryTextInput"
+                style="@style/CommonTextInput"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="18dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="18dp"
-                app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
                 app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
 
                 <!-- The padding is needed because of the custom height of the inputLayout -->
@@ -70,6 +70,47 @@
                     android:paddingBottom="10dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilPoemCategory"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
+                app:layout_constraintTop_toBottomOf="@id/tilPoemBody"
+                app:layout_constraintVertical_bias="0">
+
+                <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="-22dp">-->
+
+                <!--https://www.youtube.com/watch?v=d6lDVQ8aBRc-->
+                <!-- The padding is needed because of the custom height of the inputLayout -->
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/atvCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Category"
+                    android:inputType="textAutoComplete"
+                    android:maxLines="1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/cgCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    app:layout_constraintTop_toBottomOf="@id/atvCategories" />
+                <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
+            </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSavePoem"
                 style="@style/Widget.MaterialComponents.Button.General"
@@ -81,3 +122,118 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--&lt;!&ndash;https://medium.com/over-engineering/hands-on-with-material-components-for-android-chips-21dc67c8b956&ndash;&gt;-->
+    <!--&lt;!&ndash;https://medium.com/material-design-in-action/chips-material-components-for-android-46001664a40f&ndash;&gt;-->
+    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    xmlns:tools="http://schemas.android.com/tools"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="match_parent"-->
+    <!--    tools:context=".ui.add.AddPoemActivity">-->
+
+    <!--    <com.google.android.material.appbar.AppBarLayout-->
+    <!--        android:id="@+id/ablAddPoem"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:stateListAnimator="@animator/appbar_always_elevated"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--        <include layout="@layout/toolbar" />-->
+
+    <!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+    <!--    <ScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:fillViewport="true"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/ablAddPoem">-->
+
+    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content">-->
+
+    <!--            <com.google.android.material.textfield.TextInputLayout-->
+    <!--                android:id="@+id/tilPoemTitle"-->
+    <!--                style="@style/CommonTextInput"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="12dp"-->
+    <!--                app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--                &lt;!&ndash; The padding is needed because of the custom height of the inputLayout &ndash;&gt;-->
+    <!--                <com.google.android.material.textfield.TextInputEditText-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:hint="@string/add_poem_hint_title"-->
+    <!--                    android:inputType="textCapSentences"-->
+    <!--                    android:paddingTop="12dp"-->
+    <!--                    android:paddingBottom="10dp" />-->
+    <!--            </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--            <com.google.android.material.textfield.TextInputLayout-->
+    <!--                android:id="@+id/tilPoemBody"-->
+    <!--                style="@style/CommonTextInput"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="0dp"-->
+    <!--                android:layout_marginTop="18dp"-->
+    <!--                app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">-->
+
+    <!--                &lt;!&ndash; The padding is needed because of the custom height of the inputLayout &ndash;&gt;-->
+    <!--                <com.google.android.material.textfield.TextInputEditText-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:gravity="center_horizontal"-->
+    <!--                    android:hint="@string/add_poem_hint_body"-->
+    <!--                    android:inputType="textMultiLine"-->
+    <!--                    android:minLines="15"-->
+    <!--                    android:paddingTop="12dp"-->
+    <!--                    android:paddingBottom="10dp" />-->
+    <!--            </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--            <com.google.android.material.textfield.TextInputLayout-->
+    <!--                android:id="@+id/tilPoemCategory"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginStart="16dp"-->
+    <!--                android:layout_marginTop="18dp"-->
+    <!--                android:layout_marginEnd="16dp"-->
+    <!--                android:layout_marginBottom="20dp"-->
+    <!--                android:background="@drawable/custom_category_chip_group_border"-->
+    <!--                app:layout_constraintBottom_toTopOf="@id/btnSavePoem"-->
+    <!--                app:layout_constraintTop_toBottomOf="@id/tilPoemBody"-->
+    <!--                app:layout_constraintVertical_bias="0">-->
+
+    <!--                &lt;!&ndash; The padding is needed because of the custom height of the inputLayout &ndash;&gt;-->
+    <!--                <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
+    <!--                    android:id="@+id/atvCategories"-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_marginStart="12dp"-->
+    <!--                    android:layout_marginEnd="12dp"-->
+    <!--                    android:hint="Category"-->
+    <!--                    android:inputType="textAutoComplete"-->
+    <!--                    android:maxLines="1"-->
+    <!--                    android:paddingTop="12dp"-->
+    <!--                    android:paddingBottom="10dp"-->
+    <!--                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"-->
+    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                    app:layout_constraintStart_toStartOf="parent"-->
+    <!--                    app:layout_constraintTop_toTopOf="parent" />-->
+    <!--            </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--            <com.google.android.material.button.MaterialButton-->
+    <!--                android:id="@+id/btnSavePoem"-->
+    <!--                style="@style/Widget.MaterialComponents.Button.General"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="@dimen/entry_button_height"-->
+    <!--                android:layout_marginBottom="12dp"-->
+    <!--                android:text="@string/add_poem_button_save"-->
+    <!--                app:layout_constraintBottom_toBottomOf="parent" />-->
+    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+    <!--    </ScrollView>-->
+    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
