--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:hint="@string/add_poem_hint_body"
-                    android:inputType="textMultiLine"
+                    android:inputType="textMultiLine|textCapSentences"
                     android:minLines="15"
                     android:paddingTop="12dp"
                     android:paddingBottom="10dp" />
