--- a/app/src/main/res/layout/fragment_poem.xml
+++ b/app/src/main/res/layout/fragment_poem.xml
@@ -2,8 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/general_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ui.home.poem.PoemFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ablMain"
