--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
+            android:splitMotionEvents="false"
             android:paddingTop="6dp"
             android:paddingBottom="96dp"
             app:layout_constraintBottom_toBottomOf="parent"
