--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@drawable/landing_backg"
-    tools:context=".ui.landing.LandingActivity">
+    tools:background="@drawable/landing_backg">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
