--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
     </style>
 
     <style name="AppTheme.Landing" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/landing_backg</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
 
         <item name="android:statusBarColor">@color/colorPrimaryDark_Translucent</item>
     </style>
